--- a/src/app/(Client)/_components/post/post.scss
+++ b/src/app/(Client)/_components/post/post.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   gap: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin-top: 20px;
 
   .post-image{
     width: 100%;
