ghép api login, register

--- a/src/app/(Client)/(auth)/login/login.scss
+++ b/src/app/(Client)/(auth)/login/login.scss
@@ -46,6 +46,11 @@
             outline: 1px solid #1565D8;
           }
         }
+
+        .login-error{
+          color: red;
+          font-size: 12px;
+        }
       }
 
       .login-forgot{
