--- a/src/app/(Client)/(auth)/register/register.scss
+++ b/src/app/(Client)/(auth)/register/register.scss
@@ -46,6 +46,11 @@
             outline: 1px solid #1565D8;
           }
         }
+
+        .register-error{
+          color: red;
+          font-size: 12px;
+        }
       }
 
       .register-forgot{
